# MyDeepL

./: .gitignore  Cargo.toml  README.md
src/: args.rs  cli.rs  cmd.rs  main.rs
src/cmd/: document.rs  glossary.rs  languages.rs  text.rs
tests/: integration.rs
