[package]
name = "deepl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.71"
serde_json = "1.0.102"
#deeprl = "0.1.0"
#deeprl = { git = "https://github.com/ValuedMammal/deeprl.git" }
deeprl = { path = "../deeprl" }
